@@ -1,5 +1,6 @@
 2005-12-05  Sam Steingold  <sds@gnu.org>
 
+	* m4/x11.m4: fix overlapping messages, do not use broken CL_SILENT
 	* m4/general.m4 (CL_SILENT): removed broken macro
 
 2005-12-05  Sam Steingold  <sds@gnu.org>
